# activity_simulator

./: README.md  pyproject.toml  ruff.toml  settings.json
src/: simulator.py
src/launchers/: linux.sh  macos.command  windows.bat
